[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.11", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "promethorch"
version = "0.1.0"
description = "Russian hardware-native deep learning framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "PromeTorch Team"}]
keywords = ["deep-learning", "pytorch", "russian-hardware", "baikal", "elbrus", "nmcard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.setuptools]
packages = ["promethorch"]
